Design: nicer header, avatar, improved cards and skill badges

--- a/index.html
+++ b/index.html
@@ -5,13 +5,18 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <title>Luca Möller — Resume</title>
   <meta name="description" content="Lebenslauf / Resume von Dein Name">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;800&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
   <header class="site-header">
     <div class="container">
       <div class="header-row">
-        <h1 class="name">Luca Möller</h1>
+        <div class="profile">
+          <div class="avatar" aria-hidden="true">LM</div>
+          <h1 class="name">Luca Möller</h1>
+        </div>
         <button id="theme-toggle" aria-label="Toggle theme">🌙</button>
       </div>
       <p class="tagline">CS Student at TU Dortmund</p>
