Add Mensa e.V. membership to contact section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ Driven by curiosity, I aim to create code that is both effective and elegant.</p
       <h2>Kontakt</h2>
       <p>Email: <a href="mailto:lucamoeller@gmx.net">lucamoeller@gmx.net</a></p>
       <p>GitHub: <a href="https://github.com/Hope12345678">GitHub</a></p>
+      <p>Mitgliedschaft: <a href="https://www.mensa.de" target="_blank" rel="noopener">Mensa e.V.</a></p>
     </section>
   </main>
 
