Use assets/avatar.png as profile image and adjust avatar styles

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="container">
       <div class="header-row">
         <div class="profile">
-          <div class="avatar" aria-hidden="true">LM</div>
+          <img class="avatar" src="assets/avatar.png" alt="Luca Möller" loading="lazy">
           <h1 class="name">Luca Möller</h1>
         </div>
         <button id="theme-toggle" aria-label="Toggle theme">🌙</button>
